--- a/style.css
+++ b/style.css
@@ -13,7 +13,31 @@
 body{
     width: 910px;
     margin: auto;
+    font-family: 'Montserrat', sans-serif;
 }
+
+.logo{
+    width: 180px;
+    margin-bottom: 45px;
+    margin-top: 3%;
+}
+
+.topic h2{
+    font-size: 2.3rem;
+}
+
+.heart{
+    color: red;
+    font-size: 2rem;
+}
+
+.copywright{
+    text-align: center;
+    font-size: .95rem;
+}
+
+
+
 
 /* DEBUG */
 
@@ -65,5 +89,16 @@ body{
 }
 
 .nav, .hero, .article-column, .topic{
-   margin-bottom: 10px;  
+   margin-bottom: 50px;  
+}
+
+.nav-options span, .topic p, .article-column p{
+    color: #9F9F9F;
+    font-size: .95rem;
+    margin-right: 4px;
+}
+
+.article-column h4{
+    font-weight: normal;
+    margin-bottom: 4px;
 }
